@@ -1,4 +1,4 @@
-Date: Tue, 28 Sep 2021 17:38:55 +0000
+Date: Thu, 30 Sep 2021 12:58:41 +0000
 Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
 Content-Type: application/x-phpwiki;
   pagename=ReleaseNotes;
@@ -9,6 +9,9 @@ Content-Transfer-Encoding: binary
 <<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>
 
 == 1.6.1 2021-XX-XX Marc-Etienne Vargenau ==
+
+This release makes PhpWiki compatable with PHP 8.1.
+READONLY is renamed as ISREADONLY, since //readonly// is now a keyword in PHP 8.1.
 
 === Fixes ===
 * Make list of pages work with PDO (~AllPages, ~MostPopular...)
